--- a/src/Components/Signup.css
+++ b/src/Components/Signup.css
@@ -1,4 +1,4 @@
-body {
+vbody {
   margin: 0;
   font-family: "Circular Std", Arial, sans-serif;
   background-color: #121212;
@@ -111,3 +111,4 @@ body {
   color: white;
   text-decoration: underline;
 }
+ 
